feat(completions): update git

--- a/completions/git/language/en-US.json
+++ b/completions/git/language/en-US.json
@@ -696,6 +696,12 @@
           "next": 0
         },
         {
+          "name": "--show-signature",
+          "tip": [
+            "Show the signature of each commit."
+          ]
+        },
+        {
           "name": "--graph",
           "tip": [
             "Display branch and merge history in ASCII art alongside the log."
