--- a/completions/git/language/zh-CN.json
+++ b/completions/git/language/zh-CN.json
@@ -694,6 +694,12 @@
           "next": 0
         },
         {
+          "name": "--show-signature",
+          "tip": [
+            "显示每个提交的签名信息"
+          ]
+        },
+        {
           "name": "--graph",
           "tip": [
             "在日志旁边以 ASCII 艺术形式显示分支和合并历史"
