--- a/completions/jj/language/zh-CN.json
+++ b/completions/jj/language/zh-CN.json
@@ -49,13 +49,13 @@
               ],
               "next": [
                 {
-                  "name": "\"@\""
+                  "name": "'@'"
                 },
                 {
-                  "name": "\"@-\""
+                  "name": "'@-'"
                 },
                 {
-                  "name": "\"@+\""
+                  "name": "'@+'"
                 }
               ]
             }
@@ -131,13 +131,13 @@
               ],
               "next": [
                 {
-                  "name": "\"@\""
+                  "name": "'@'"
                 },
                 {
-                  "name": "\"@-\""
+                  "name": "'@-'"
                 },
                 {
-                  "name": "\"@+\""
+                  "name": "'@+'"
                 }
               ]
             },
@@ -257,6 +257,20 @@
           ],
           "tip": [
             "打印配置文件的路径"
+          ],
+          "next": [
+            {
+              "name": "--user",
+              "tip": [
+                "以用户级配置为目标"
+              ]
+            },
+            {
+              "name": "--repo",
+              "tip": [
+                "以仓库级别的配置为目标"
+              ]
+            }
           ]
         },
         {
@@ -296,13 +310,13 @@
           ],
           "next": [
             {
-              "name": "\"@\""
+              "name": "'@'"
             },
             {
-              "name": "\"@-\""
+              "name": "'@-'"
             },
             {
-              "name": "\"@+\""
+              "name": "'@+'"
             }
           ]
         },
@@ -364,13 +378,13 @@
       ],
       "next": [
         {
-          "name": "\"@\""
+          "name": "'@'"
         },
         {
-          "name": "\"@-\""
+          "name": "'@-'"
         },
         {
-          "name": "\"@+\""
+          "name": "'@+'"
         }
       ]
     },
@@ -580,13 +594,13 @@
               "name": "::"
             },
             {
-              "name": "\"@\""
+              "name": "'@'"
             },
             {
-              "name": "\"@-\""
+              "name": "'@-'"
             },
             {
-              "name": "\"@+\""
+              "name": "'@+'"
             }
           ]
         },
@@ -611,6 +625,52 @@
       "name": "metaedit",
       "tip": [
         "修改修订的元数据而不更改其内容"
+      ],
+      "options": [
+        {
+          "name": "--update-change-id",
+          "tip": [
+            "生成新的变更 ID"
+          ]
+        },
+        {
+          "name": "--update-author-timestamp",
+          "tip": [
+            "更新作者时间戳"
+          ]
+        },
+        {
+          "name": "--update-author",
+          "tip": [
+            "将作者更新为已配置的用户"
+          ]
+        },
+        {
+          "name": "--author",
+          "tip": [
+            "U: --author <AUTHOR>\n",
+            "将作者设置为所提供的字符串"
+          ],
+          "next": 0
+        },
+        {
+          "name": "--author-timestamp",
+          "tip": [
+            "U: --author-timestamp <AUTHOR_TIMESTAMP>\n",
+            "将提交者日期设置为所提供的日期，该日期可以是人类可读的，例如 Sun, 23 Jan 2000 01:23:45 JST)\n也可以是时间戳，例如 2000-01-23T01:23:45+09:00"
+          ],
+          "next": [
+            {
+              "name": "2000-01-23T01:23:45+09:00"
+            }
+          ]
+        },
+        {
+          "name": "--update-committer-timestamp",
+          "tip": [
+            "更新提交者时间戳"
+          ]
+        }
       ]
     },
     {
@@ -620,13 +680,13 @@
       ],
       "next": [
         {
-          "name": "\"@\""
+          "name": "'@'"
         },
         {
-          "name": "\"@-\""
+          "name": "'@-'"
         },
         {
-          "name": "\"@+\""
+          "name": "'@+'"
         }
       ],
       "options": [
@@ -775,13 +835,13 @@
               "name": "::"
             },
             {
-              "name": "\"@\""
+              "name": "'@'"
             },
             {
-              "name": "\"@-\""
+              "name": "'@-'"
             },
             {
-              "name": "\"@+\""
+              "name": "'@+'"
             }
           ]
         },
@@ -867,6 +927,100 @@
       "name": "show",
       "tip": [
         "显示修订的变更描述和变更内容"
+      ],
+      "options": [
+        {
+          "name": "-T",
+          "alias": [
+            "--template"
+          ],
+          "tip": [
+            "U: -T, --template <TEMPLATE>\n",
+            "使用给定的模板呈现修订版本"
+          ],
+          "next": 0
+        },
+        {
+          "name": "-s",
+          "alias": [
+            "--summary"
+          ],
+          "tip": [
+            "U: -s, --summary\n",
+            "对于每条路径，只需显示它是被修改、添加还是删除了。"
+          ]
+        },
+        {
+          "name": "--stat",
+          "tip": [
+            "展示变更的直方图"
+          ]
+        },
+        {
+          "name": "--types",
+          "tip": [
+            "对于每条路径，只显示其前后的类型"
+          ]
+        },
+        {
+          "name": "--name-only",
+          "tip": [
+            "对于每条路径，仅显示其路径"
+          ]
+        },
+        {
+          "name": "--git",
+          "tip": [
+            "显示 Git 格式的差异"
+          ]
+        },
+        {
+          "name": "--color-words",
+          "tip": [
+            "显示单词级别的差异，仅用颜色标示变化"
+          ]
+        },
+        {
+          "name": "--tool",
+          "tip": [
+            "U: --tool <TOOL>\n",
+            "通过外部命令生成差异"
+          ],
+          "next": 0
+        },
+        {
+          "name": "--context",
+          "tip": [
+            "U: --context <CONTEXT>\n",
+            "要显示的上下文行数"
+          ]
+        },
+        {
+          "name": "-w",
+          "alias": [
+            "--ignore-all-space"
+          ],
+          "tip": [
+            "U: -w, --ignore-all-space\n",
+            "比较行时忽略空格"
+          ]
+        },
+        {
+          "name": "-b",
+          "alias": [
+            "--ignore-space-change"
+          ],
+          "tip": [
+            "U: -b, --ignore-space-change\n",
+            "比较行时忽略空白数量的变化"
+          ]
+        },
+        {
+          "name": "--no-patch",
+          "tip": [
+            "不要展示补丁"
+          ]
+        }
       ]
     },
     {
@@ -914,13 +1068,13 @@
               "name": "::"
             },
             {
-              "name": "\"@\""
+              "name": "'@'"
             },
             {
-              "name": "\"@-\""
+              "name": "'@-'"
             },
             {
-              "name": "\"@+\""
+              "name": "'@+'"
             }
           ]
         },
