feat(completions): update jj

--- a/completions/jj/language/en-US.json
+++ b/completions/jj/language/en-US.json
@@ -680,6 +680,12 @@
       ],
       "next": [
         {
+          "name": "main@origin",
+          "tip": [
+            "Create a new change as a child of main@origin"
+          ]
+        },
+        {
           "name": "'@'"
         },
         {
