--- a/completions/jj/language/zh-CN.json
+++ b/completions/jj/language/zh-CN.json
@@ -680,6 +680,12 @@
       ],
       "next": [
         {
+          "name": "main@origin",
+          "tip": [
+            "将新变更创建为 main@origin 的子变更"
+          ]
+        },
+        {
           "name": "'@'"
         },
         {
