feat(completions): update jj

--- a/completions/jj/language/en-US.json
+++ b/completions/jj/language/en-US.json
@@ -1130,6 +1130,18 @@
       "name": "tag",
       "tip": [
         "Manage tags"
+      ],
+      "next": [
+        {
+          "name": "list",
+          "alias": [
+            "l"
+          ],
+          "tip": [
+            "U: l, list\n",
+            "List tags"
+          ]
+        }
       ]
     },
     {
