--- a/completions/jj/language/zh-CN.json
+++ b/completions/jj/language/zh-CN.json
@@ -1130,6 +1130,18 @@
       "name": "tag",
       "tip": [
         "管理标签"
+      ],
+      "next": [
+        {
+          "name": "list",
+          "alias": [
+            "l"
+          ],
+          "tip": [
+            "U: l, list\n",
+            "列出标签"
+          ]
+        }
       ]
     },
     {
