feat(completions): update jj

--- a/completions/jj/language/en-US.json
+++ b/completions/jj/language/en-US.json
@@ -1287,7 +1287,7 @@
     "completion_info": {
       "url": "https://jj-vcs.github.io/",
       "description": [
-        "A Git-compatible version control system that is both simple and powerful."
+        "Jujutsu - A Git-compatible version control system that is both simple and powerful."
       ]
     }
   }
