--- a/completions/jj/language/zh-CN.json
+++ b/completions/jj/language/zh-CN.json
@@ -1287,7 +1287,7 @@
     "completion_info": {
       "url": "https://jj-vcs.github.io/",
       "description": [
-        "一个与 Git 兼容的版本控制系统，既简单又强大。"
+        "Jujutsu - 一个与 Git 兼容的版本控制系统，既简单又强大。"
       ]
     }
   }
